создает верстку страницы по роуту /saved-movies

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="видеохостинг">
     <meta name="keywords" content="видеохостинг, фильмы, видео, лайки">
     <meta name="author" content="Варвара">
-    <title>Место-react</title>
+    <title>Диплом</title>
   </head>
   <body>
     <div id="root" class="root"></div>
